# hole

./: .cirun.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICES.md  README.md  biome.json  build.yaml  clippy.toml  package-lock.json  package.json  prek.toml  renovate.json  tsconfig.json  ty.toml  vite.config.ts
crates/bridge/: Cargo.toml
crates/bridge/src/: cutover.rs  cutover_tests.rs  diagnostics.rs  diagnostics_tests.rs  dispatcher.rs  dns.rs  dns_state.rs  dns_state_tests.rs  endpoint.rs  filter.rs  filter_tests.rs  foreground.rs  foreground_tests.rs  gateway.rs  group.rs  group_tests.rs  guards.rs  guards_tests.rs  hole_router.rs  hole_router_tests.rs  interop_tests.rs  ipc.rs  ipc_tests.rs  lib.rs  logging.rs  platform.rs  plugin_recovery.rs  plugin_recovery_tests.rs  plugin_state.rs  plugin_state_tests.rs  proxy.rs  proxy_manager.rs  proxy_manager_e2e_tests.rs  proxy_manager_listener_e2e_tests.rs  proxy_manager_tests.rs  proxy_tests.rs  reachability.rs  reachability_tests.rs  retry.rs  retry_tests.rs  (+12 more)
crates/bridge/tests/: cutover_leak_privileged.rs  cutover_nic_capture_privileged.rs  cutover_privileged.rs
crates/common/: Cargo.toml  build.rs
crates/common/api/: openapi.yaml
crates/common/src/: config.rs  config_store.rs  config_store_tests.rs  config_tests.rs  dns_providers.rs  dns_providers_tests.rs  import.rs  import_tests.rs  lib.rs  logging.rs  logging_test_helpers.rs  logging_tests.rs  paths.rs  plugin.rs  plugin_tests.rs  port_alloc.rs  port_alloc_tests.rs  process.rs  process_tests.rs  protocol.rs  protocol_tests.rs  retry.rs  retry_tests.rs  update_marker.rs  update_marker_tests.rs  verify.rs  verify_tests.rs  version.rs  version_tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: foreground.rs  foreground_tests.rs  gateway.rs  gateway_tests.rs  group.rs  group_tests.rs  ipc.rs  ipc_tests.rs  lib.rs  logging.rs  main.rs  platform.rs  proxy.rs  proxy_manager.rs  proxy_manager_tests.rs  proxy_tests.rs  routing.rs  routing_tests.rs  socket.rs  socket_tests.rs
crates/dev-console/: Cargo.toml
crates/dev-console/src/: ansi.rs  banner.rs  console_corruption_tests.rs  group_gate.rs  group_gate_tests.rs  interrupts.rs  interrupts_tests.rs  lib.rs  main.rs  mux.rs  mux_tests.rs  policy.rs  policy_tests.rs  ready.rs  ready_tests.rs  steps.rs  steps_tests.rs  supervise.rs  supervise_tests.rs  test_child.rs  transcript.rs  transcript_tests.rs
crates/dump/: Cargo.toml
crates/dump-macros/: Cargo.toml
crates/dump-macros/src/: lib.rs
crates/dump-macros/tests/: derive_tests.rs
crates/dump/src/: debug_bridge.rs  display.rs  display_tests.rs  dump_trait.rs  dump_trait_tests.rs  format.rs  format_tests.rs  impls.rs  impls_tests.rs  ladder.rs  ladder_tests.rs  lib.rs  serde_bridge.rs  serde_bridge_tests.rs  value.rs  value_tests.rs
crates/galoshes/: Cargo.toml  LICENSE.md  build.rs
crates/galoshes/src/: embedded.rs  embedded_tests.rs  lib.rs  main.rs  sitrep_out.rs  sitrep_out_tests.rs  yamux.rs  yamux_tests.rs
crates/garter/: Cargo.toml  README.md  SITREP.md
crates/garter-bin/: Cargo.toml  build.rs
crates/garter-bin/src/: config.rs  config_tests.rs  lib.rs  main.rs
crates/garter/src/: binary.rs  binary_tests.rs  chain.rs  chain_tests.rs  counting.rs  counting_tests.rs  error_tests.rs  lib.rs  plugin.rs  plugin_tests.rs  proc_group.rs  shutdown.rs  shutdown_tests.rs  sip003.rs  sip003_tests.rs  sitrep.rs  sitrep_tests.rs  tap.rs  tap_tests.rs  test_utils.rs  tracing_test.rs  tracing_test_tests.rs
crates/garter/tests/: chain_integration.rs  tap_integration.rs
crates/gui/: .cache  Cargo.toml  build.rs  installer.wxs  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/src/: bridge_client.rs  bridge_client_tests.rs  cli.rs  cli_log_tests.rs  cli_tests.rs  commands.rs  commands_tests.rs  daemon_client.rs  daemon_client_tests.rs  elevation.rs  elevation_tests.rs  installer_tests.rs  lib.rs  log_collector.rs  logging.rs  logging_tests.rs  main.rs  path_management.rs  path_management_tests.rs  platform.rs  setup.rs  setup_tests.rs  state.rs  tray.rs  tray_icons.rs  tray_tests.rs  update.rs  version.rs
crates/handle-holders/: Cargo.toml
crates/handle-holders/src/: lib.rs  lib_tests.rs  macos.rs  unsupported.rs  windows.rs
crates/handle-holders/tests/: live_holders.rs
crates/hole/: Cargo.toml  build.rs  tauri.conf.json
crates/hole/dmg/: background.typ  (+1 more)
crates/kill-group/: Cargo.toml  README.md
crates/payload-archive/: Cargo.toml
crates/plugin-e2e/: Cargo.toml
crates/stepstool/: Cargo.toml  README.md
crates/test-observability/: Cargo.toml
crates/tombstone/: Cargo.toml
crates/tun-engine/: Cargo.toml  README.md
crates/tun-engine-macros/: Cargo.toml
crates/util/: Cargo.toml
crates/wix/: Cargo.toml  README.md  build.rs
dmg-installer/: pyproject.toml
dmg-installer/scripts/: preview_dmg.py
dmg-installer/tests/: conftest.py  test_background_copy.py  test_config.py  test_dmg_layout.py  test_dmg_payload.py  test_dmg_signing.py  test_layout.py
msi-installer/: pyproject.toml
msi-installer/tests/: conftest.py  test_build.py  test_hole_msi.py  test_hole_wxs.py
xtask/: Cargo.toml
xtask-lib/: Cargo.toml
xtask-lib/src/: asset.rs  asset_tests.rs  bindir.rs  bindir_tests.rs  ex_ray_version.rs  ex_ray_version_tests.rs  lib.rs  repo_root.rs  repo_root_tests.rs  test_support.rs  v2ray_plugin_version.rs  v2ray_plugin_version_tests.rs  version.rs  version_tests.rs
xtask/src/: bindir.rs  bindir_tests.rs  ci_coverage.rs  ci_coverage_tests.rs  dmg_background.rs  dmg_background_tests.rs  ex_ray.rs  galoshes.rs  galoshes_tests.rs  gen_ui_constants.rs  gen_ui_constants_tests.rs  golangci_lint.rs  interrupt.rs  interrupt_tests.rs  lib.rs  main.rs  manifest.rs  manifest_tests.rs  orchestrate.rs  orchestrate_tests.rs  privilege.rs  privilege_tests.rs  stage.rs  stage_tests.rs  target.rs  tauri_bundle_tests.rs  test_binaries.rs  test_binaries_tests.rs  test_child.rs  update_archive.rs  update_archive_tests.rs  upstream_v2ray.rs  v2ray_plugin.rs  wintun.rs
(+473 files in other folders)
