[workspace]
members = ["crates/common", "crates/bridge", "crates/dump", "crates/dump-macros", "crates/galoshes", "crates/garter", "crates/garter-bin", "crates/handle-holders", "crates/hole", "crates/mock-plugin", "crates/test-observability", "crates/tun-engine", "crates/tun-engine-macros", "xtask", "xtask-lib"]
resolver = "2"

[workspace.package]
# Galoshes crates (moved into `crates/` via the monorepo merge) reference
# `edition.workspace = true`; providing it here keeps their manifests
# resolvable. `license` is deliberately NOT set at the workspace level —
# Hole's crates are GPL-3.0-or-later, ex-Galoshes crates retain
# Apache-2.0, and each crate declares its own. See NOTICES.md for the
# Galoshes attribution preserved under Apache-2.0 §4(c).
edition = "2021"

[workspace.dependencies]
skuld = { version = "0.2", features = ["tokio"] }
# Pre-main init for the test-observability subscriber install. See
# crates/test-observability and bindreams/hole#301.
#
# `default-features = false` disables the `proc_macro` default feature
# (the `#[ctor]` attribute macro). Re-exporting wrappers must use the
# declarative `ctor::declarative::ctor!` form instead — the proc-macro
# emits absolute `::ctor::…` paths in consumer crates, which fails
# because consumers (galoshes, hole, garter-bin, …) don't depend on
# ctor directly. Upstream docs: "It is recommended that crates
# re-exporting the `ctor` macro disable this feature and only use the
# declarative form."
ctor = { version = "1.0", default-features = false }
insta = { version = "1", features = ["yaml"] }
trybuild = "1"
# DNS forwarder deps — direct so a future shadowsocks-service bump cannot
# silently change the forwarder's hickory/tokio-socks versions.
hickory-proto = "0.26"
hickory-resolver = "0.26"
hickory-server = "0.26"
tokio-socks = "0.5"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
rustls-pki-types = "1"
webpki-roots = "1"
# Shared across ex-Galoshes crates; Hole-side crates can opt in via `{ workspace = true }` too.
anyhow = "1"
async-trait = "0.1"
contracts = "0.6"

[workspace.lints.clippy]
disallowed_methods = "deny"

# Release profile carries enough debug info for symbolicated panic
# backtraces. Without this, `backtrace::Backtrace::force_capture()` in
# `hole_common::logging::install_panic_hook` produces `<unknown>` frames
# (the bridge.log panic in bindreams/hole#393). `"limited"` emits line
# tables + function names, no types/locals — the right trade-off for
# end-user crash reports vs PDB size.
[profile.release]
debug = "limited"
