[workspace]
members = ["crates/common", "crates/bridge", "crates/dev-console", "crates/dump", "crates/dump-macros", "crates/galoshes", "crates/garter", "crates/garter-bin", "crates/handle-holders", "crates/hole", "crates/kill-group", "crates/payload-archive", "crates/plugin-e2e", "crates/stepstool", "crates/test-observability", "crates/tombstone", "crates/tun-engine", "crates/tun-engine-macros", "crates/util", "xtask", "xtask-lib"]
resolver = "2"

[workspace.package]
# Galoshes crates (moved into `crates/` via the monorepo merge) reference
# `edition.workspace = true`; providing it here keeps their manifests
# resolvable. `license` is deliberately NOT set at the workspace level —
# Hole's crates are GPL-3.0-or-later, ex-Galoshes crates retain
# Apache-2.0, and each crate declares its own. See NOTICES.md for the
# Galoshes attribution preserved under Apache-2.0 §4(c).
edition = "2021"

[workspace.dependencies]
skuld = { version = "0.2", features = ["tokio"] }
# Pre-main init for the test-observability subscriber install. See
# crates/test-observability and bindreams/hole#301.
#
# `default-features = false` disables the `proc_macro` default feature
# (the `#[ctor]` attribute macro). Re-exporting wrappers must use the
# declarative `ctor::declarative::ctor!` form instead — the proc-macro
# emits absolute `::ctor::…` paths in consumer crates, which fails
# because consumers (galoshes, hole, garter-bin, …) don't depend on
# ctor directly. Upstream docs: "It is recommended that crates
# re-exporting the `ctor` macro disable this feature and only use the
# declarative form."
ctor = { version = "1.0", default-features = false }
insta = { version = "1", features = ["yaml"] }
trybuild = "1"
# DNS forwarder deps — direct so a future shadowsocks-service bump cannot
# silently change the forwarder's hickory/tokio-socks versions.
hickory-proto = "0.26"
hickory-resolver = "0.26"
hickory-server = "0.26"
tokio-socks = "0.5"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
rustls-pki-types = "1"
webpki-roots = "1"
# Shared across ex-Galoshes crates; Hole-side crates can opt in via `{ workspace = true }` too.
anyhow = "1"
async-trait = "0.1"
bitflags = "2"
contracts = "0.6"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native-crash observability (bindreams/hole#438). All MIT-OR-Apache-2.0.
# Pinned here so common + hole + bridge + galoshes share one version.
# `crash-context` is pinned next to crash-handler because BOTH the macOS
# minidump by-value path (rebuilds a CrashContext field-by-field, needs
# `crash_context::ExceptionInfo` — crash-handler re-exports CrashContext but
# NOT ExceptionInfo, and CrashContext is not Clone) AND the Linux marker
# writer (reads `crash_context::CrashContext::{siginfo, pid, tid}` directly)
# need crash-context types in scope. See review S1.
# MUST be "0.6" (not "0.7"): crash-handler 0.7 depends on crash-context "0.6",
# so its re-exported `CrashContext` IS the 0.6 type. A "0.7" direct dep would
# resolve to a DISTINCT, incompatible type and fail to unify with crash-handler's
# API in the on_crash signature / minidump rebuild. (0.6.3 field shapes verified.)
crash-handler = "0.7"
crash-context = "0.7"
minidump-writer = "0.12"
sadness-generator = "0.7"

[workspace.lints.clippy]
disallowed_methods = "deny"

# Symbolicated panic backtraces. Without these settings,
# `backtrace::Backtrace::force_capture()` in
# `hole_common::logging::install_panic_hook` produces `<unknown>` frames
# (the bridge.log panic in bindreams/hole#393).
#
# - `debug = "limited"` (release only) — emits line tables + function
#   names without types/locals. Cargo's release default is `false` which
#   strips everything.
# - `split-debuginfo = "packed"` — bundles debug info into a separate
#   `.pdb` (MSVC, already the platform default) or `.dSYM` (macOS, the
#   non-default). The cargo macOS dev default is `"unpacked"`, which
#   leaves debug info in per-crate `.o` files referenced by the binary
#   — so a binary copied out of `target/<profile>/` to a staging dir
#   has no resolvable debug info. `"packed"` produces a self-contained
#   `hole.dSYM` bundle that travels with the binary via `bindir_files`.
[profile.dev]
split-debuginfo = "packed"

[profile.release]
debug = "limited"
split-debuginfo = "packed"
