[project]
name = "dmg-installer"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["dmgbuild>=1.6", "ds_store>=1.3"]

[project.scripts]
build = "dmg_installer.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmg_installer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
