[project]
name = "msi-installer"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["httpx", "rich"]

[project.scripts]
build = "msi_installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msi_installer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["wix: tests requiring the WiX toolchain (skip with -m 'not wix')"]

[dependency-groups]
dev = ["pytest"]
