[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "xtask"
path = "src/lib.rs"
harness = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
xtask-lib = { path = "../xtask-lib" }

# `cargo xtask wintun` (Windows-only at runtime, but the deps are unconditional
# so the workspace `cargo check` is identical across platforms — easier to keep
# everyone on the same lockfile).
sha2 = "0.11"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }

# `cargo xtask build|test|list` (build.yaml manifest + DAG orchestration).
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.8"

[dev-dependencies]
skuld = { workspace = true }
tempfile = "3"
