[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "xtask"
path = "src/lib.rs"
harness = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
xtask-lib = { path = "../xtask-lib" }

# `cargo xtask wintun` / `cargo xtask golangci-lint` (download + extract +
# SHA256-verify runtime/lint binaries). Deps are unconditional so the workspace
# `cargo check` is identical across platforms — easier to keep everyone on the
# same lockfile. golangci-lint ships `.zip` (windows) and `.tar.gz`
# (linux/darwin) archives, so we need both `zip` and `flate2`+`tar`.
sha2 = "0.11"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

# `cargo xtask build|test|list` (build.yaml manifest + DAG orchestration).
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.8"

# Privilege normalization (`elevated:` flag, bindreams/hole#453). POSIX uses nix
# for typed User/Uid/Gid (feature `user`) and libc for the actual syscalls
# (setgroups/getgrouplist absent from nix on apple_targets, so libc is uniform
# across linux + macos).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }
libc = "0.2"

# Windows privilege control: elevation detection + UAC self-elevation
# (ShellExecuteEx runas) + linked-token de-elevation (CreateProcessWithTokenW)
# + Job-Object reaping + pipe stdio. Version matches the workspace (0.62).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    # ShellExecuteExW + SHELLEXECUTEINFOW (UAC self-elevation) are gated behind
    # Win32_System_Registry (the struct carries an HKEY); SystemServices supplies
    # SECURITY_MANDATORY_HIGH_RID for the de-elevated child's integrity check.
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
skuld = { workspace = true }
tempfile = "3"
