[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "xtask"
path = "src/lib.rs"
harness = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
ctrlc = "3" # transparent-launcher interrupt handling (#568): a handler (not SIG_IGN) resets to default across exec, so children stay interruptible while xtask survives Ctrl+C and propagates the child's exit status
glob = "0.3"
xtask-lib = { path = "../xtask-lib", features = ["serde", "clap", "version"] }
hole-common = { path = "../crates/common" } # `gen-ui-constants` reads NETWORK_BLOCKED_MESSAGE

# `cargo xtask wintun` / `cargo xtask golangci-lint` (download + extract +
# SHA256-verify runtime/lint binaries). Deps are unconditional so the workspace
# `cargo check` is identical across platforms — easier to keep everyone on the
# same lockfile. golangci-lint ships `.zip` (windows) and `.tar.gz`
# (linux/darwin) archives, so we need both `zip` and `flate2`+`tar`.
sha2 = "0.11"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

# `cargo xtask build|test|list` (build.yaml manifest + DAG orchestration).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.8"

[dev-dependencies]
skuld = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2" # raise()/kill() + SIGINT in signal tests

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = ["Win32_System_Console"] } # GenerateConsoleCtrlEvent in the Ctrl+Break e2e test (#568)
