[package]
name = "hole-bridge"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "hole_bridge"
harness = false

[dependencies]
hole-common = { path = "../common" }
handle-holders = { path = "../handle-holders" }
tun-engine = { path = "../tun-engine" }
garter = { path = "../../external/galoshes/garter" }
shadowsocks-service = { version = "1", features = ["local", "local-http", "aead-cipher-2022"] }
shadowsocks = "=1.24.0"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
socket2 = "0.6"
axum = { version = "0.8", default-features = false, features = ["json"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tower = { version = "0.5", features = ["util"] }
ureq = { version = "3", features = ["json"] }
tempfile = "3"
# Filter engine dependencies. All except `lru` and `tls-parser` are already
# pulled in transitively via shadowsocks-service; promoted to direct deps so
# the filter module can `use` them. Pinned to the same minor versions that
# shadowsocks-service 1.24 uses to avoid duplication.
idna = "1"
ipnet = "2"
regex = "1"
# New crates not previously in the tree.
lru = "0.16"
tls-parser = "0.12"
# Filter engine runtime deps — smoltcp types leak into HoleRouter for
# CIDR parsing of the TUN's hard-coded v4/v6 subnets.
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ip", "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp",
] }
arc-swap = "1"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = [
    "Wdk_Foundation",
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
] }
# Used by the ETW consumer in crates/bridge/src/diagnostics/etw.rs.
ferrisetw = "1.2.0"

[dev-dependencies]
skuld = { workspace = true }
tokio = { version = "1", features = ["test-util"] }
shadowsocks-service = { version = "1", features = ["server"] }
rcgen = "0.13"
rand = "0.9"
base64 = "0.22"
# Used by `test_support::net_discovery` for primary IPv4 detection in TUN tests.
default-net = "0.22"
# Library dep on the workspace task runner so the dist-directory e2e test
# fixture can call `xtask::run_stage` directly instead of shelling out to
# `cargo xtask stage`. The path-dep form is deliberate: if `xtask` ever
# moves, compilation breaks immediately with a clear error rather than
# silently drifting.
xtask = { path = "../../xtask" }
