[package]
name = "hole-bridge"
version = "0.3.0"
edition = "2021"
publish = false

[package.metadata.hole-release]
group = "hole"

[lints]
workspace = true

[lib]
name = "hole_bridge"
harness = false

# Idle helper exe for the privileged-lane cutover tests (a real running image to
# rename-swap underneath). The `cutover_privileged` integration test reaches it
# via `CARGO_BIN_EXE_test_idle`, which Cargo injects after building every bin in
# the package for an integration target.
[[bin]]
name = "test_idle"
path = "src/bin/test_idle.rs"
test = false
doctest = false

[dependencies]
hole-common = { path = "../common" }
tombstone = { path = "../tombstone" }
util = { path = "../util" }
handle-holders = { path = "../handle-holders" }
tun-engine = { path = "../tun-engine" }
dump = { path = "../dump" }
garter = { path = "../garter" }
# Single source of truth for the BINDIR name set; the Windows update-cutover
# swaps every bundled binary, not just hole.exe. No `clap`/`serde` features —
# the cutover needs only the pure name-set fn.
xtask-lib = { path = "../../xtask-lib" }
shadowsocks-service = { version = "1", features = ["local", "local-http", "aead-cipher-2022"] }
shadowsocks = "=1.24.0"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
# Runtime-checked async-cleanup discipline: SystemDnsApplied and other async-
# cleanup guards own a `DebugDropBomb` defused by `shutdown().await`. Drop
# panics in debug builds if the bomb is armed, catching missed-shutdown bugs
# at first test run. Release builds use the no-op DebugDropBomb variant and
# fall through to a best-effort sync fallback with a `warn!` log. See #397
# and the "Bridge cancellation contract" section in CLAUDE.md.
drop_bomb = "0.1"
socket2 = "0.6"
axum = { version = "0.8", default-features = false, features = ["json"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
# Robust Info.plist parse (XML + binary) for the macOS .app swap-target identity
# anchor in cutover::app_dest — a security gate must not hand-roll string search.
plist = "1"
# Filter engine dependencies. All except `lru` and `tls-parser` are already
# pulled in transitively via shadowsocks-service; promoted to direct deps so
# the filter module can `use` them. Pinned to the same minor versions that
# shadowsocks-service 1.24 uses to avoid duplication.
idna = "1"
ipnet = "2"
regex = "1"
# New crates not previously in the tree.
lru = "0.18"
tls-parser = "0.12"
# Filter engine runtime deps — smoltcp types leak into HoleRouter for
# CIDR parsing of the TUN's hard-coded v4/v6 subnets.
smoltcp = { version = "0.13", default-features = false, features = [
    "alloc",
    "medium-ip", "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp",
] }
arc-swap = "1"
async-trait = "0.1"
# DNS forwarder — workspace-pinned direct deps; see workspace Cargo.toml.
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
tokio-socks = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = [
    "Wdk_Foundation",
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_JobObjects",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Threading",
] }
# Used by the ETW consumer in crates/bridge/src/diagnostics/etw.rs.
ferrisetw = "1.2.0"

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
# WaitableWriter + tracing_test::set_default_in_current_thread for the
# sweep-wiring assertion in foreground_tests. The production dep above
# does not enable test-utils; this override adds it for tests only.
garter = { path = "../garter", features = ["test-utils"] }
# Kill-group child spawn for the CTRL_BREAK shutdown-delivery test
# (CREATE_NEW_PROCESS_GROUP + group signal). See foreground_tests.rs.
kill-group = { path = "../kill-group" }
# `process` is enabled NOWHERE in the bridge's tokio features today (main
# dep: rt-multi-thread/macros/sync/signal/io-util/net; dev-dep: test-util) —
# the child-process test below needs it.
tokio = { version = "1", features = ["test-util", "process"] }
# In-process log capture in tests — verifies diagnostic spans /
# `elapsed_ms` debug logs (#247) and the forwarder's typed-error log
# lines (layer=..., caused_by=...) added for #248.
tracing-subscriber = { version = "0.3", features = ["fmt"] }
# Shared plugin test harness (real ss-server +/- server-mode plugin, certs,
# sentinel, the garter-based roundtrip driver, binary locators). Brings
# shadowsocks-service's `server` feature + rcgen + base64 transitively; the
# bridge's own tests no longer reference those directly after the move (#435).
plugin-e2e = { path = "../plugin-e2e" }
rand = "0.10"
# Used by `test_support::net_discovery` for primary IPv4 detection in TUN tests.
default-net = "0.22"
# File-identity (volume serial + file index) for the privileged-lane cutover
# proofs: the on-disk `Handle` must FLIP across a swap (the GUI self-heal
# precondition). Same crate `crates/hole` uses for #514 self-heal.
same-file = "1"
# Library dep on the workspace task runner so the dist-directory e2e test
# fixture can call `xtask::run_stage` directly instead of shelling out to
# `cargo xtask stage`. The path-dep form is deliberate: if `xtask` ever
# moves, compilation breaks immediately with a clear error rather than
# silently drifting.
xtask = { path = "../../xtask" }

# Privileged-lane cutover proofs (real rename/SCM/renamex_np FFI). A skuld
# harness, like the lib tests; an integration target so Cargo builds + injects
# the `test_idle` helper bin (`CARGO_BIN_EXE_test_idle`).
[[test]]
name = "cutover_privileged"
path = "tests/cutover_privileged.rs"
harness = false

# Privileged-lane cutover LEAK proofs (real WFP/pf engage + egress probes:
# Mullvad-#8470 fail-open, both-covers recovery).
[[test]]
name = "cutover_leak_privileged"
path = "tests/cutover_leak_privileged.rs"
harness = false

# Privileged-lane WIRE-LEVEL no-leak proof (Windows in-box pktmon capture of the
# physical egress NIC across the standing lockdown cover). The body is
# cfg(windows); on other platforms the target is just main() + a cfg'd-out test.
[[test]]
name = "cutover_nic_capture_privileged"
path = "tests/cutover_nic_capture_privileged.rs"
harness = false
