[package]
name = "hole-common"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }
