[package]
name = "hole-common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-log = "0.2"
tracing-appender = "0.2"
file-rotate = "0.8"
os_pipe = "1"
time = { version = "0.3", features = ["serde-well-known", "formatting"] }
yaml_serde = "0.10"
nu-ansi-term = "0.50"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
typify = "0.6"
schemars = "0.8"
serde_json = "1"
yaml_serde = "0.10"

[dev-dependencies]
skuld = { workspace = true }
log = "0.4"
tempfile = "3"
