[package]
name = "hole-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "hole_daemon"
harness = false

[[bin]]
name = "hole-daemon"
path = "src/main.rs"

[dependencies]
hole-common = { path = "../common" }
shadowsocks-service = { version = "1", features = ["local", "local-tun", "local-http"] }
shadowsocks = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
default-net = "0.22"
tokio-util = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }
