[package]
name = "hole-daemon"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "hole_daemon"
harness = false

[dependencies]
hole-common = { path = "../common" }
shadowsocks-service = { version = "1", features = ["local", "local-tun", "local-http"] }
shadowsocks = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
default-net = "0.22"
tokio-util = "0.7"
socket2 = "0.6"
axum = { version = "0.8", default-features = false, features = ["json"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_RemoteDesktop",
] }

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }
