[package]
name = "dump-macros"
version = "0.1.0"
edition = "2021"
publish = false
description = "Proc-macro support for the dump crate (provides #[derive(Dump)])."
repository = "https://github.com/bindreams/hole"
license = "GPL-3.0-or-later"

[package.metadata.hole-release]
group = "hole"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
dump = { path = "../dump" }
skuld = { workspace = true }

[[test]]
name = "derive_tests"
path = "tests/derive_tests.rs"
harness = false
