[package]
name = "galoshes"
version = "0.2.1"
edition.workspace = true
license = "Apache-2.0"
publish = false

[package.metadata.hole-release]
group = "galoshes"

[lints]
workspace = true

[features]
# Dev-only minidump passthrough (bindreams/hole#438). NON-DEFAULT. Enabled
# only by `cargo xtask galoshes` when HOLE_CRASH_DUMPS is set (the dev path sets
# it in the `hole` run step). Release / MSI / standalone galoshes builds never set it,
# so minidump-writer is absent from the windows-arm64 galoshes matrix (where
# it has no support). The marker→breadcrumb path still works there.
crash-dumps = ["tombstone/crash-dumps"]

[lib]
harness = false

[dependencies]
garter = { path = "../garter" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
contracts = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
yamux = "0.14"
sha2 = "0.11"
tempfile = "3"
tombstone = { path = "../tombstone" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# WSAIoctl(SIO_UDP_CONNRESET) — see `bind_udp` in yamux.rs (#415).
# Win32_System_IO supplies WSAOVERLAPPED, referenced by WSAIoctl's signature.
windows = { version = "0.62", features = ["Win32_Networking_WinSock", "Win32_System_IO"] }

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
# Enable garter's `test_utils::WaitableWriter` for the E2E relay tests
# (the module is gated behind garter's `test-utils` feature).
garter = { path = "../garter", features = ["test-utils"] }

[build-dependencies]
sha2 = "0.11"
xtask-lib = { path = "../../xtask-lib", features = ["version"] }
